--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "lib": [
       "es2017",
       "dom"
-    ]
-  }
+    ]   
+  },
+   "include": [
+    "src/**/*.ts",
+    "node_modules/angular-bootstrap-md/**/*.ts"
+  ]
 }
